
[build-system]
requires = [
    "setuptools>=61",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "ccfwidget"
version = "0.5.3"
requires-python = ">=3.5"
requires = [ 
  "dask",
  "fsspec[http]",
  "ipytree",
  "itkwidgets == 0.30.1",
  "toolz",
  "xarray",
  "zarr",
  "requests",
  ]
